--- a/bai1-xhr-callback/index.html
+++ b/bai1-xhr-callback/index.html
@@ -251,17 +251,17 @@
         </div> -->
 
         <!-- Template cho Comment Item -->
-        <div class="comment-item">
+        <!-- <div class="comment-item">
             <div class="comment-author"></div>
             <div class="comment-email"></div>
             <div class="comment-body"></div>
-        </div>
+        </div> -->
 
         <!-- Template cho Todo Item -->
-        <div class="todo-item" data-todo-id="" data-completed="">
+        <!-- <div class="todo-item" data-todo-id="" data-completed="">
             <div class="todo-checkbox"></div>
             <div class="todo-text"></div>
-        </div>
+        </div> -->
 
         <script src="./app.js"></script>
     </body>
